--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,3 +35,18 @@ jobs:
 
       - name: Coding Standards
         run: yarn lint
+
+      - name: NPM Publish
+        run: |
+          pkg_name=$(cat package.json | jq -r '.name')
+          pkg_version=$(cat package.json | jq -r '.version')
+          major=$(echo "$pkg_version" | cut -d. -f1)
+          minor=$(echo "$pkg_version" | cut -d. -f2)
+          patch=$(echo "$pkg_version" | cut -d. -f3)
+
+          echo pkg_name
+          echo pkg_version
+          echo major
+          echo minor
+          echo patch
+
