--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,8 @@ jobs:
         run: yarn lint
 
       - name: NPM Publish
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           pkg_name=$(cat package.json | jq -r '.name')
           pkg_version=$(cat package.json | jq -r '.version')
