--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@adhamu/zero",
+  "name": "@devmatic/zero",
   "version": "0.0.1",
   "description": "Shared linting and formatting configurations",
   "repository": {
