--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
-          registry-url: 'https://registry.npmjs.org'
-          scope: '@devmatic'
+          registry-url: 'https://npm.pkg.github.com'
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Cache node_modules
         uses: actions/cache@v2
@@ -40,7 +39,7 @@ jobs:
       - name: Coding Standards
         run: yarn lint
 
-      - name: Publish to NPM Registry
+      - name: Publish to Github Registry
         run: |
           pkg_name=$(cat package.json | jq -r '.name')
           pkg_version=$(cat package.json | jq -r '.version')
