--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adhamu/zero",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "description": "Shared linting and formatting configurations",
   "keywords": [
     "eslint",
@@ -10,7 +10,8 @@
     "typescript",
     "jest",
     "lint",
-    "format"
+    "format",
+    "styled components"
   ],
   "repository": "https://github.com/adhamu/zero",
   "license": "UNLICENSED",
@@ -26,6 +27,7 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.16.3",
     "@emotion/eslint-plugin": "^11.7.0",
+    "@stylelint/postcss-css-in-js": "^0.37.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.1",
@@ -48,6 +50,8 @@
     "eslint-plugin-testcafe": "^0.2.1",
     "eslint-plugin-testing-library": "^5.0.1",
     "eslint-plugin-woke": "^1.0.0",
+    "postcss": "^8.4.5",
+    "postcss-syntax": "^0.36.2",
     "prettier": "^2.5.1",
     "stylelint": "^14.1.0",
     "stylelint-config-idiomatic-order": "^8.1.0",
