--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,9 +41,11 @@ jobs:
 
       - name: Publish
         run: |
+          pkg_version=$(cat package.json | jq -r '.version')
           branch=${GITHUB_REF##*/}
 
           if [[ $branch != "main" ]]; then
+            yarn version --new-version "$pkg_version-beta$GITHUB_RUN_NUMBER" --no-git-tag-version
             yarn publish --tag beta --access public
           else
             yarn publish --access public
