--- a/package.json
+++ b/package.json
@@ -24,32 +24,30 @@
     "prepare": "npx is-ci || husky install"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.16.3",
     "@emotion/eslint-plugin": "^11.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "eslint": "^8.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.0.0",
     "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-no-only-tests": "^2.6.0",
-    "eslint-plugin-no-unsanitized": "^4.0.0",
+    "eslint-plugin-no-unsanitized": "^4.0.1",
     "eslint-plugin-no-wildcard-postmessage": "^0.2.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-regexp": "^1.5.1",
-    "eslint-plugin-testcafe": "^0.2.1",
-    "eslint-plugin-testing-library": "^5.0.1",
-    "eslint-plugin-woke": "^1.0.0",
-    "prettier": "^2.5.1",
-    "stylelint": "^14.1.0",
+    "eslint-plugin-regexp": "^1.6.0",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-testing-library": "^5.0.4",
+    "eslint-plugin-woke": "^1.0.1",
+    "prettier": "^2.6.0",
+    "stylelint": "^14.3.0",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-sass-guidelines": "^9.0.1",
@@ -58,11 +56,9 @@
     "stylelint-prettier": "^2.0.0"
   },
   "devDependencies": {
-    "husky": "^7.0.0"
+    "husky": "^7.0.4"
   },
   "peerDependencies": {
-    "@babel/core": "^7.16.0",
-    "typescript": "^4.5.2",
-    "webpack": "^5.65.0"
+    "typescript": "^4.6.3"
   }
 }
