--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adhamu/zero",
-  "version": "4.1.2",
+  "version": "4.2.0",
   "description": "Shared linting and formatting configurations",
   "keywords": [
     "eslint",
@@ -15,9 +15,7 @@
   "repository": "https://github.com/adhamu/zero",
   "license": "UNLICENSED",
   "author": "Amit Dhamu",
-  "bin": {
-    "zero": "./bin/install.sh"
-  },
+  "bin": "./bin/setup.js",
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -25,13 +23,14 @@
   },
   "dependencies": {
     "@emotion/eslint-plugin": "^11.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "eslint": "^8.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "colors": "^1.4.0",
+    "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.0.0",
+    "eslint-plugin-jest": "^26.1.5",
     "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
@@ -41,13 +40,14 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-regexp": "^1.6.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-regexp": "^1.7.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-testing-library": "^5.0.4",
     "eslint-plugin-woke": "^1.0.1",
+    "inquirer": "^8.2.4",
     "prettier": "^2.6.0",
-    "stylelint": "^14.3.0",
+    "stylelint": "^14.8.0",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-sass-guidelines": "^9.0.1",
