--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adhamu/zero",
-  "version": "4.4.0",
+  "version": "5.0.0",
   "description": "Shared linting and formatting configurations",
   "keywords": [
     "eslint",
@@ -22,43 +22,41 @@
     "prepare": "npx is-ci || husky install"
   },
   "dependencies": {
-    "@emotion/eslint-plugin": "^11.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@emotion/eslint-plugin": "^11.10.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
     "colors": "^1.4.0",
-    "eslint": "^8.14.0",
+    "eslint": "^8.30.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.5",
-    "eslint-plugin-jest-dom": "^4.0.1",
+    "eslint-plugin-jest": "^27.1.7",
+    "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-jest-formatting": "^3.1.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-no-only-tests": "^2.6.0",
-    "eslint-plugin-no-unsanitized": "^4.0.1",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-no-unsanitized": "^4.0.2",
     "eslint-plugin-no-wildcard-postmessage": "^0.2.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-regexp": "^1.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-regexp": "^1.11.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-testing-library": "^5.0.4",
+    "eslint-plugin-testing-library": "^5.9.1",
     "eslint-plugin-woke": "^1.0.1",
-    "inquirer": "^8.2.4",
-    "prettier": "^2.6.0",
-    "stylelint": "^14.8.0",
-    "stylelint-config-idiomatic-order": "^8.1.0",
-    "stylelint-config-prettier": "^9.0.3",
+    "inquirer": "^9.1.4",
+    "prettier": "^2.8.1",
+    "stylelint": "^14.16.0",
+    "stylelint-config-idiomatic-order": "^9.0.0",
+    "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-sass-guidelines": "^9.0.1",
-    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-prettier": "^2.0.0"
+    "stylelint-prettier": "^2.0.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "husky": "^7.0.4"
-  },
-  "peerDependencies": {
-    "typescript": "^4.6.3"
+    "husky": "^8.0.2"
   }
 }
