--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           echo ::set-output name=CURRENT_VERSION::$(cat package.json | jq -r '.version')
           echo ::set-output name=PUBLISHED_VERSION::$(npm view @adhamu/zero version)
           echo ::set-output name=BRANCH::${GITHUB_REF##*/}
-          echo ::set-output name=RELEASE_NOTES::$(git log 5.1.0..${{ steps.env_vars.outputs.PUBLISHED_VERSION }} --format="%C(auto)%h %s")
+          echo ::set-output name=RELEASE_NOTES::$(git log 5.1.0..$(npm view @adhamu/zero version) --format="%C(auto)%h %s")
         id: env_vars
 
       - name: Install Node.js ${{ steps.env_vars.outputs.NODE_VERSION }}
@@ -51,7 +51,9 @@ jobs:
 
       - name: Get release notes
         run: |
-          echo "${{ steps.env_vars.outputs.RELEASE_NOTES }}\n\n**Full Changelog**: https://github.com/adhamu/zero/compare/5.1.0..${{ steps.env_vars.outputs.PUBLISHED_VERSION }}"
+          echo "${{ steps.env_vars.outputs.RELEASE_NOTES }}
+
+          **Full Changelog**: https://github.com/adhamu/zero/compare/5.1.0..${{ steps.env_vars.outputs.PUBLISHED_VERSION }}"
 
       - name: Create Release
         if: github.ref == 'refs/heads/main'
