--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,12 @@ jobs:
           echo ::set-output name=CURRENT_VERSION::$(cat package.json | jq -r '.version')
           echo ::set-output name=PUBLISHED_VERSION::$(npm view @adhamu/zero version)
           echo ::set-output name=BRANCH::${GITHUB_REF##*/}
-          echo ::set-output name=RELEASE_NOTES::$(git log 5.1.0..$(npm view @adhamu/zero version) --format="%C(auto)%h %s")
+
+          changeset=$(git log 5.1.0..$(npm view @adhamu/zero version) --format="%C(auto)%h %s")
+          changeset="${changeset//'%'/'%25'}"
+          changeset="${changeset//$'\n'/'%0A'}"
+          changeset="${changeset//$'\r'/'%0D'}"
+          echo ::set-output name=RELEASE_NOTES::${changeset}
 
         id: env_vars
 
