--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
         with:
           tag_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
           release_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
-          body: "${{ steps.env_vars.outputs.RELEASE_NOTES }}\n\nFull Changelog**: https://github.com/adhamu/zero/compare/5.1.0..${{ steps.env_vars.outputs.PUBLISHED_VERSION }}"
+          body: "${{ steps.env_vars.outputs.RELEASE_NOTES }}\n\n**Full Changelog**: https://github.com/adhamu/zero/compare/5.1.0..${{ steps.env_vars.outputs.PUBLISHED_VERSION }}"
           draft: true
           prerelease: true
 
