--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,21 +18,10 @@ jobs:
 
       - name: Set Environment Variables
         run: |
-          git --no-pager log --decorate=short --pretty=oneline -n1
-
-          git tag | cat
-
-          echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
-          echo ::set-output name=CURRENT_VERSION::$(cat package.json | jq -r '.version')
-          echo ::set-output name=PUBLISHED_VERSION::$(npm view @adhamu/zero version)
-          echo ::set-output name=BRANCH::${GITHUB_REF##*/}
-
-          changeset=$(git log 5.1.0..$(npm view @adhamu/zero version) --format="%C(auto)%h %s")
-          changeset="${changeset//'%'/'%25'}"
-          changeset="${changeset//$'\n'/'%0A'}"
-          changeset="${changeset//$'\r'/'%0D'}"
-          echo ::set-output name=RELEASE_NOTES::${changeset}
-
+          echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_OUTPUT
+          echo "CURRENT_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_OUTPUT
+          echo "PUBLISHED_VERSION=$(npm view @adhamu/zero version)" >> $GITHUB_OUTPUT
+          echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
         id: env_vars
 
       - name: Install Node.js ${{ steps.env_vars.outputs.NODE_VERSION }}
@@ -61,36 +50,6 @@ jobs:
       - name: Coding Standards
         run: yarn lint
 
-      - name: Get release notes
-        run: |
-          echo -e "${{ steps.env_vars.outputs.RELEASE_NOTES }}
-
-          **Full Changelog**: https://github.com/adhamu/zero/compare/5.1.0..${{ steps.env_vars.outputs.PUBLISHED_VERSION }}"
-
-      - name: Create Draft Release
-        if: github.ref != 'refs/heads/main'
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
-        with:
-          tag_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
-          release_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
-          body: "${{ steps.env_vars.outputs.RELEASE_NOTES }}\n\n**Full Changelog**: https://github.com/adhamu/zero/compare/5.1.0..${{ steps.env_vars.outputs.PUBLISHED_VERSION }}"
-          draft: true
-          prerelease: true
-
-      - name: Create Release
-        if: github.ref == 'refs/heads/main'
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
-        with:
-          tag_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
-          release_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
-          body: "**Full Changelog**: https://github.com/adhamu/zero/compare/${{ steps.env_vars.outputs.PUBLISHED_VERSION }}...${{ steps.env_vars.outputs.CURRENT_VERSION }}"
-          draft: false
-          prerelease: false
-
       - name: Publish to Registry
         run: |
           pkg_version=${{ steps.env_vars.outputs.CURRENT_VERSION }}
@@ -102,3 +61,27 @@ jobs:
           else
             yarn publish --access public
           fi
+
+      - name: Create Changeset
+        if: github.ref == 'refs/heads/main'
+        run: |
+          changeset=$(git log ${{ steps.env_vars.outputs.PUBLISHED_VERSION }}..${{ steps.env_vars.outputs.CURRENT_VERSION }} --format="%C(auto)%h %s")
+
+          changeset="${changeset//'%'/'%25'}"
+          changeset="${changeset//$'\n'/'%0A'}"
+          changeset="${changeset//$'\r'/'%0D'}"
+
+          echo "RELEASE_NOTES=${changeset}" >> $GITHUB_OUTPUT
+        id: changeset
+
+      - name: Create Release
+        if: github.ref == 'refs/heads/main'
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
+        with:
+          tag_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
+          release_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
+          body: "${{ steps.env_vars.changeset.RELEASE_NOTES }}\n\n**Full Changelog**: https://github.com/adhamu/zero/compare/${{ steps.env_vars.outputs.PUBLISHED_VERSION }}...${{ steps.env_vars.outputs.CURRENT_VERSION }}"
+          draft: false
+          prerelease: false
