--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set Environment Variables
         run: |
-          echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
-          echo ::set-output name=CURRENT_VERSION::$(cat package.json | jq -r '.version')
-          echo ::set-output name=PUBLISHED_VERSION::$(npm view @adhamu/zero version)
-          echo ::set-output name=BRANCH::${GITHUB_REF##*/}
+          echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_OUTPUT
+          echo "CURRENT_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_OUTPUT
+          echo "PUBLISHED_VERSION=$(npm view @adhamu/zero version)" >> $GITHUB_OUTPUT
+          echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
         id: env_vars
 
       - name: Install Node.js ${{ steps.env_vars.outputs.NODE_VERSION }}
@@ -48,18 +50,6 @@ jobs:
       - name: Coding Standards
         run: yarn lint
 
-      - name: Create Release
-        if: github.ref == 'refs/heads/main'
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
-        with:
-          tag_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
-          release_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
-          body: "**Full Changelog**: https://github.com/adhamu/zero/compare/${{ steps.env_vars.outputs.PUBLISHED_VERSION }}...${{ steps.env_vars.outputs.CURRENT_VERSION }}"
-          draft: false
-          prerelease: false
-
       - name: Publish to Registry
         run: |
           pkg_version=${{ steps.env_vars.outputs.CURRENT_VERSION }}
@@ -71,3 +61,27 @@ jobs:
           else
             yarn publish --access public
           fi
+
+      - name: Create Changeset
+        if: github.ref == 'refs/heads/main'
+        run: |
+          changeset=$(git log ${{ steps.env_vars.outputs.PUBLISHED_VERSION }}..${{ steps.env_vars.outputs.CURRENT_VERSION }} --format="%C(auto)%h %s")
+
+          changeset="${changeset//'%'/'%25'}"
+          changeset="${changeset//$'\n'/'%0A'}"
+          changeset="${changeset//$'\r'/'%0D'}"
+
+          echo "RELEASE_NOTES=${changeset}" >> $GITHUB_OUTPUT
+        id: changeset
+
+      - name: Create Release
+        if: github.ref == 'refs/heads/main'
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
+        with:
+          tag_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
+          release_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
+          body: "${{ steps.changeset.outputs.RELEASE_NOTES }}\n\n**Full Changelog**: https://github.com/adhamu/zero/compare/${{ steps.env_vars.outputs.PUBLISHED_VERSION }}...${{ steps.env_vars.outputs.CURRENT_VERSION }}"
+          draft: false
+          prerelease: false
