--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set Environment Variables
         run: |
           echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_OUTPUT
-          echo "CURRENT_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_OUTPUT
+          echo "NEW_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_OUTPUT
           echo "PUBLISHED_VERSION=$(npm view @adhamu/zero version)" >> $GITHUB_OUTPUT
           echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
         id: env_vars
@@ -52,7 +52,7 @@ jobs:
 
       - name: Publish to Registry
         run: |
-          pkg_version=${{ steps.env_vars.outputs.CURRENT_VERSION }}
+          pkg_version=${{ steps.env_vars.outputs.NEW_VERSION }}
           branch=${{ steps.env_vars.outputs.BRANCH }}
 
           if [[ $branch != "main" ]]; then
@@ -67,7 +67,7 @@ jobs:
       - name: Create Changeset
         if: github.ref == 'refs/heads/main'
         run: |
-          changeset=$(git log ${{ steps.env_vars.outputs.PUBLISHED_VERSION }}..${{ steps.env_vars.outputs.CURRENT_VERSION }} --format="%C(auto)%h %s")
+          changeset=$(git log ${{ steps.env_vars.outputs.PUBLISHED_VERSION }}..${{ steps.env_vars.outputs.NEW_VERSION }} --format="%C(auto)%h %s")
 
           changeset="${changeset//'%'/'%25'}"
           changeset="${changeset//$'\n'/'%0A'}"
@@ -82,8 +82,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
-          tag_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
-          release_name: ${{ steps.env_vars.outputs.CURRENT_VERSION }}
-          body: "${{ steps.changeset.outputs.RELEASE_NOTES }}\n\n**Full Changelog**: https://github.com/adhamu/zero/compare/${{ steps.env_vars.outputs.PUBLISHED_VERSION }}...${{ steps.env_vars.outputs.CURRENT_VERSION }}"
+          tag_name: ${{ steps.env_vars.outputs.NEW_VERSION }}
+          release_name: ${{ steps.env_vars.outputs.NEW_VERSION }}
+          body: "${{ steps.changeset.outputs.RELEASE_NOTES }}\n\n**Full Changelog**: https://github.com/adhamu/zero/compare/${{ steps.env_vars.outputs.PUBLISHED_VERSION }}...${{ steps.env_vars.outputs.NEW_VERSION }}"
           draft: false
           prerelease: false
