--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adhamu/zero",
-  "version": "6.1.0",
+  "version": "7.0.0",
   "description": "Shared linting and formatting configurations",
   "keywords": [
     "eslint",
@@ -19,44 +19,51 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "npx is-ci || husky install"
+    "prepare": "npx is-ci || husky",
+    "test": "jest --colors"
   },
   "dependencies": {
-    "@emotion/eslint-plugin": "^11.11.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
+    "@clack/prompts": "^0.10.0",
+    "@emotion/eslint-plugin": "^11.12.0",
+    "@eslint/compat": "^1.2.7",
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.21.0",
+    "@typescript-eslint/parser": "^8.26.1",
     "colors": "^1.4.0",
-    "eslint": "^8.50.0",
+    "eslint": "^9.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jest": "^27.4.0",
-    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-import-resolver-typescript": "^3.8.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-jest-dom": "^5.5.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-no-unsanitized": "^4.0.2",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-n": "^17.15.1",
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "eslint-plugin-no-unsanitized": "^4.1.2",
     "eslint-plugin-no-wildcard-postmessage": "^0.2.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-regexp": "^1.15.0",
-    "eslint-plugin-security": "^1.7.1",
-    "eslint-plugin-testing-library": "^6.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-regexp": "^2.7.0",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-testing-library": "^7.1.1",
     "eslint-plugin-woke": "^1.0.1",
-    "inquirer": "^9.2.11",
-    "prettier": "^3.0.3",
-    "stylelint": "^15.10.3",
-    "stylelint-config-idiomatic-order": "^9.0.0",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
+    "stylelint": "^16.16.0",
+    "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-sass-guidelines": "^10.0.0",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-order": "^6.0.3",
-    "stylelint-prettier": "^4.0.2",
-    "typescript": "^5.2.2"
+    "stylelint-config-sass-guidelines": "^12.1.0",
+    "stylelint-config-standard": "^37.0.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-prettier": "^5.0.3",
+    "typescript-eslint": "^8.26.1"
   },
   "devDependencies": {
-    "husky": "^8.0.3"
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "typescript": "^5.8.2"
   }
 }
