--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,32 +11,35 @@ jobs:
   pipeline:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          filter: tree:0
 
       - name: Set Environment Variables
         run: |
-          echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_OUTPUT
-          echo "NEW_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_OUTPUT
-          echo "PUBLISHED_VERSION=$(npm view @adhamu/zero version)" >> $GITHUB_OUTPUT
-          echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
+          echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_ENV
+          echo "NEW_VERSION=$(jq -r '.version' package.json)" >> $GITHUB_ENV
+          echo "PUBLISHED_VERSION=$(npm view @adhamu/zero version || echo '0.0.0')" >> $GITHUB_ENV
+          echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
         id: env_vars
 
-      - name: Install Node.js ${{ steps.env_vars.outputs.NODE_VERSION }}
-        uses: actions/setup-node@v2
+      - name: Install Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
+          node-version: ${{ env.NODE_VERSION }}
           registry-url: "https://registry.npmjs.org"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Cache node_modules
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-modules-
 
       - name: Install dependencies
         run: yarn --frozen-lockfile
@@ -52,30 +55,30 @@ jobs:
 
       - name: Create Changeset
         run: |
-          CHANGELOG=$(git --no-pager log ${{ steps.env_vars.outputs.PUBLISHED_VERSION }}..HEAD --format="%C(auto)%h %s")
+          CHANGELOG=$(git --no-pager log $PUBLISHED_VERSION..HEAD --format="%C(auto)%h %s")
           DELIMITER="$(openssl rand -hex 8)"
 
-          echo "RELEASE_NOTES<<${DELIMITER}" >> $GITHUB_OUTPUT
-          echo -e "$CHANGELOG" >> $GITHUB_OUTPUT
-          echo "${DELIMITER}" >> $GITHUB_OUTPUT
+          echo "RELEASE_NOTES<<${DELIMITER}" >> $GITHUB_ENV
+          echo -e "$CHANGELOG" >> $GITHUB_ENV
+          echo "${DELIMITER}" >> $GITHUB_ENV
         id: changeset
 
       - name: Create Release
         if: github.ref == 'refs/heads/main'
-        uses: actions/create-release@latest
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
-          tag_name: ${{ steps.env_vars.outputs.NEW_VERSION }}
-          release_name: ${{ steps.env_vars.outputs.NEW_VERSION }}
-          body: "${{ steps.changeset.outputs.RELEASE_NOTES }}\n\n**Full Changelog**: https://github.com/adhamu/zero/compare/${{ steps.env_vars.outputs.PUBLISHED_VERSION }}...${{ steps.env_vars.outputs.NEW_VERSION }}"
+          tag_name: ${{ env.NEW_VERSION }}
+          release_name: ${{ env.NEW_VERSION }}
+          body: "${{ env.RELEASE_NOTES }}\n\n**Full Changelog**: https://github.com/adhamu/zero/compare/${{ env.PUBLISHED_VERSION }}...${{ env.NEW_VERSION }}"
           draft: false
           prerelease: false
 
       - name: Publish to Registry
         run: |
-          pkg_version=${{ steps.env_vars.outputs.NEW_VERSION }}
-          branch=${{ steps.env_vars.outputs.BRANCH }}
+          pkg_version=$NEW_VERSION
+          branch=$BRANCH
 
           if [[ $branch != "main" ]]; then
             yarn version --new-version "$pkg_version-beta$GITHUB_RUN_NUMBER" --no-git-tag-version
