--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@eslint/compat": "^1.2.7",
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.21.0",
+    "@stylistic/stylelint-config": "^2.0.0",
     "@typescript-eslint/parser": "^8.26.1",
     "colors": "^1.4.0",
     "eslint": "^9.22.0",
